# SandPiles

./: CMakeLists.txt  Cell.cpp  Cell.h  Configuration.cpp  Configuration.h  RNG_MT19937.cpp  RNG_MT19937.h  Slope_Cell.cpp  Slope_Cell.h  main.cpp  readme.md  utils.h
